--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
   "dependencies": {
     "@apollo/client": "^3.13.6",
     "graphql": "^16.10.0",
-    "nativewind": "^4.1.23",
+    "nativewind": "^2.0.11",
     "react": "19.0.0",
-    "react-native": "0.78.2",
-    "tailwindcss": "^3.4.17"
+    "react-native": "0.78.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
