--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "graphql": "^16.10.0",
     "nativewind": "^2.0.11",
     "react": "19.0.0",
-    "react-native": "0.78.2"
+    "react-native": "0.78.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
