--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.6",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/stack": "^7.2.10",
     "graphql": "^16.10.0",
     "nativewind": "^2.0.11",
     "react": "19.0.0",
     "react-native": "0.78.2",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.10.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
