--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-native": "0.78.2",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
+    "react-native-video": "^6.12.0",
+    "react-native-video-controls": "^2.8.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
